How to play 추가.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,23 @@
     <script src="/script.js"></script>
   </head>
   <body  onselectstart="return false;" ondragstart="return false;">
+      <div id="howto1" class="overlay">
+          <div class = "howto">
+              <div class = "contentswrap">
+                  <center><h1> How to play </h1></center>
+                    <ol>
+                        <li> Grey-colored squares are neutral. </li>
+                        <li> You can change squares into your team color with points.
+                             <ul>
+                                 <li> You can invest your points to your team square to make it strong. </li>
+                                 <li> You can invest your points to other team square to conquer it. </li>
+                            </ul>
+                        </li>
+                        <li> need 2points to attack the completed cell </li>
+                    </ol>
+              </div>
+          </div>
+      </div>
       <div id="popup1" class="overlay">
           <div class="popup">
               <div class="contentswrap">
@@ -52,6 +69,7 @@
       </div>
       </div>
       <div class="userInfo">
+          <h4>version beta 0.1</h4>
           <p>users online : </p>
       </div>
       <div class="infoLayer">
